# lvgl_power

./: CMakeLists.txt  Dockerfile  Makefile  README.md  lv_conf.h  lv_drv_conf.h  lv_power_conf.h  main.c
lv_drivers/sdl/: sdl_gpu.c
lv_power/: CMakeLists.txt  lv_power.h  lv_power.mk
lv_power/src/controller/: power_controller.c  power_controller.h
lv_power/src/model/: power_model.c  power_model.h
lv_power/src/view/: power_view.c  power_view.h
